--- a/eks/deployment.yaml
+++ b/eks/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: simple-bank-api
-        image: 095420225348.dkr.ecr.eu-west-1.amazonaws.com/simplebank:latest
+        image: 726727478506.dkr.ecr.us-west-2.amazonaws.com/simplebank:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
